--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,9 @@
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.4.1"
   },
   "devDependencies": {
