--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.4.1"
+    "pg": "^8.4.1",
+    "react-step-progress": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
