--- a/server/client/package.json
+++ b/server/client/package.json
@@ -9,7 +9,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
-    "react-toastify": "^6.0.9"
+    "react-toastify": "^6.0.9",
+    "socket.io-client": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
