--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.4.1",
-    "react-step-progress": "^1.0.3"
+    "react-step-progress": "^1.0.3",
+    "socket.io": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
